# computer_network

./: .gitignore  Stanford CS144 Computer Network.md
C++notes/: C++ dev_env.md  Introductions.md
C++tutorials/: C++ dev_env.md  C++dev_env.md  cmake_tutorial.md  explicit_keyword.cpp  hello  hello.cpp
C++tutorials/C++basics/: helloworld
C++tutorials/STL/: vector  vector.cpp
C++tutorials/class/: CMakeLists.txt  basic_class.cpp  class_template_main  class_template_main.cpp  main  main.cpp  person.cpp  person.h  point.cpp  point.h
C++tutorials/cmake_project/: Makefile  main.cpp
C++tutorials/containers/associativeContainers/: map  map.cpp
C++tutorials/containers/iterators/: loop  loop.cpp
C++tutorials/containers/sequenceContainers/: deque  deque.cpp  vector  vector.cpp
C++tutorials/cs106l-lecture-code-main/: .gitignore
C++tutorials/pointer/: basic_pointers.cpp  smart_pointers.cpp  type_safty
C++tutorials/reference/: basic_reference  basic_reference.cpp
C++tutorials/reference/pointer/: basic_pointers  pointers  type_safty.cpp
C++tutorials/simple_project/: CMakeLists.txt  ReadMe.md
C++tutorials/simple_project/app/: CMakeLists.txt  main.cc
C++tutorials/simple_project/lib/: CMakeLists.txt  hello.cc  hello.hh
C++tutorials/streams/: hello.txt  helloworld  helloworld.cpp  input.txt  streaming  streaming.cpp
C++tutorials/structure/: main  pair.cpp  solveQuadratic  solveQuadratic.cpp  stanfordID.cpp
C++tutorials/template/: CMakeLists.txt  Vector_main  Vector_main.cpp  lambda_functions  lambda_functions.cpp  main  std_algorithms  std_algorithms.cpp  template_functions  template_functions.cpp  type_safty
Lecture_notes/: Lecture notes - Week 1 Day 2.md  Stanford CS144 Computer Network.md  Unit1-Internet-and-IP.md  Unit2-Transport.md  Week 2 Wednesday.md  check0_note.md  lab0_note.md  lab1_note.md
cmake_project/: CMakeLists.txt  CMakeLists_0.txt  Makefile  Makefile_1  Makefile_2  cmake_tutorial.md  main.cpp
cmake_project/answer/: CMakeLists.txt  answer.cpp
cmake_project/answer/include/answer/: answer.hpp
cmake_project/curl_wrapper/: CMakeLists.txt
cs144_minnow/: CMakeLists.txt
cs144_minnow/apps/: CMakeLists.txt
cs144_minnow/notes/: check0_note.md
cs144_minnow/src/: CMakeLists.txt
cs144_sponge/: CMakeLists.txt
cs144_sponge/apps/: CMakeLists.txt  webget  webget.cc
cs144_sponge/libsponge/: byte_stream.cc  byte_stream.hh
cs144_sponge/libsponge/util/: buffer.cc  socket.hh
docs/: C++Introductions.md  C++dev_env.md  Prompts.md  Stanford CS144 Computer Network.md
docs/c++notes/: C++Introductions.md  C++dev_env.md  c_env_intall.sh  gcc_tutorial.md  gdb_tutorial.md  lab_build.md  make_cmake_tutorial.md
docs/lab_handouts/: lab0.md
docs/lab_notes/: Lab1_stitching_substrings_into_a_byte_stream.md  Network_tools.md  c_env_intall.sh  lab0_note.md  lab2.md  lab3.md  lab4.md  lab_build.md  lab_intro.md
docs/lecture_notes/: Unit1-Internet-and-IP.md  Unit2-Transport.md
docs/lecture_notes/Unit1-Internet-and-IP/: wireshark.md
docs/lecture_notes/Unit2-Transport/: 2 Transport.md  2.10 TCP header.md  2.12 TCP Setup and Teardown.html  2.5 Error Detection.md  2.6 Finite State Machines.md  2.7 Flow Control.md  2.9 Retransmission Strategies.md  flow-control-tutorial.html  fsm-tutorial.html  fsm-tutorial.md  retransmission_strategies.html
docs/lecture_notes/Unit3-Packet-Switching/: cs144-packet-switching.html  cs144-packet-switching.md
docs/lecture_notes/Unit4-Congestion-Control/: 4-congestion_control.html  4-congestion_control.md
docs/letcture-slides-2020/Unit4-Congestion-Control/: statestreetRDP_1781762485.rdp
lib/include/: Shape.h  Vector.h  Vector.tpp  printUtils.cpp  printUtils.h
libs/utils/: CMakelists.txt
libs/utils/src/: StanfordID.cpp  printUtils.cpp
slides/CS106L-C++/: 2025Spring-10-TemplateClasses.pptx  ~$2025Spring-01-Welcome.pptx
sponge/: CMakeLists.txt
sponge/apps/: bidirectional_stream_copy.cc  bidirectional_stream_copy.hh  lab7.cc  network_simulator.cc  tcp_benchmark.cc  tcp_ip_ethernet.cc  tcp_ipv4.cc  tcp_native.cc  tcp_udp.cc  udp_tcpdump.cc  webget.cc
sponge/doctests/: address_dt.cc  parser_dt.cc  parser_example.cc  socket_dt.cc  socket_example_1.cc  socket_example_2.cc  socket_example_3.cc
sponge/etc/: cflags.cmake  tests.cmake
sponge/libsponge/: byte_stream.cc  byte_stream.hh  network_interface.cc  network_interface.hh  router.cc  router.hh  stream_reassembler.cc  stream_reassembler.hh  tcp_connection.cc  tcp_connection.hh  tcp_receiver.cc  tcp_receiver.hh  tcp_sender.cc  tcp_sender.hh  wrapping_integers.cc  wrapping_integers.hh
sponge/libsponge/tcp_helpers/: arp_message.cc  arp_message.hh  ethernet_frame.cc  ethernet_frame.hh  ethernet_header.cc  ethernet_header.hh  fd_adapter.cc  fd_adapter.hh  ipv4_datagram.cc  ipv4_datagram.hh  ipv4_header.cc  ipv4_header.hh  lossy_fd_adapter.hh  tcp_config.hh  tcp_header.cc  tcp_header.hh  tcp_over_ip.cc  tcp_over_ip.hh  tcp_segment.cc  tcp_segment.hh  tcp_sponge_socket.cc  tcp_sponge_socket.hh  tcp_state.cc  tcp_state.hh  tuntap_adapter.cc  tuntap_adapter.hh
sponge/libsponge/util/: address.cc  (+15 more)
sponge/tests/: byte_stream_capacity.cc  byte_stream_construction.cc  byte_stream_many_writes.cc  byte_stream_one_write.cc  byte_stream_test_harness.cc  byte_stream_test_harness.hh  byte_stream_two_writes.cc  fsm_ack_rst_relaxed.cc  fsm_ack_rst_win_relaxed.cc  fsm_active_close.cc  fsm_connect_relaxed.cc  fsm_listen_relaxed.cc  fsm_loopback.cc  fsm_loopback_win.cc  fsm_passive_close.cc  fsm_reorder.cc  fsm_retx.hh  fsm_retx_relaxed.cc  fsm_retx_win.cc  fsm_stream_reassembler_cap.cc  fsm_stream_reassembler_dup.cc  fsm_stream_reassembler_harness.hh  fsm_stream_reassembler_holes.cc  fsm_stream_reassembler_many.cc  fsm_stream_reassembler_overlapping.cc  fsm_stream_reassembler_seq.cc  fsm_stream_reassembler_single.cc  fsm_stream_reassembler_win.cc  fsm_winsize.cc  ipv4_parser.cc  net_interface.cc  network_interface_test_harness.cc  network_interface_test_harness.hh  receiver_harness.hh  recv_close.cc  recv_connect.cc  recv_reorder.cc  recv_special.cc  recv_transmit.cc  recv_window.cc  (+24 more)
(+4 files in other folders)
